re PR c++/67240 ([concepts] Implicit conversion constraints are not respected)

PR c++/67240
	* constraint.cc (satisfy_implicit_conversion_constraint): Also
	check for NULL_TREE.

From-SVN: r227081